--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,28 @@
 <html>
-    
+  <head>
+      <title>
+          Article One | Keshav Ashiya
+      </title>
+  </head>
+  <body>
+      <div>
+          <a href="/">Home</a>
+      </div>
+      <hr/>
+      <h3>
+          Article One
+      </h3>
+      <div>
+          Sep 5, 2016
+      </div>
+      <p>
+          This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.
+      </p>
+      <p>
+          This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.
+      </p>
+      <p>
+          This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.
+      </p>
+  </body>
 </html>    
