[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,1 +1,24 @@
+<html>
+  <head>
+      <title>
+          Article Two | Keshav Ashiya
+      </title>
+      <meta name='viewport' content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+      <div>
+          <a href="/">Home</a>
+      </div>
+      <hr/>
+      <h3>
+          Article Two
+      </h3>
+      <div>
+          Sep 6, 2016
+      </div>
+      <p>
+          This is the contant for my frst article.
+      </p>
+  </body>
+</html>    
 
