--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -17,7 +17,7 @@
           Sep 6, 2016
       </div>
       <p>
-          This is the contant for my frst article.
+          This is the contant for my two article.
       </p>
   </body>
 </html>    
