[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,12 @@
           Article One | Keshav Ashiya
       </title>
       <meta name='viewport' content="width=device-width, initial-scale=1" />
+      <style>
+          
+      </style>
   </head>
   <body>
+    <div>
       <div>
           <a href="/">Home</a>
       </div>
@@ -16,6 +20,7 @@
       <div>
           Sep 5, 2016
       </div>
+      <div>
       <p>
           This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.
       </p>
@@ -25,5 +30,7 @@
       <p>
           This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.This is the contant for my frst article.
       </p>
+      </div>
+    </div>
   </body>
 </html>    
