--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,11 +5,16 @@
       </title>
       <meta name='viewport' content="width=device-width, initial-scale=1" />
       <style>
-          
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            color: grey;
+            font-family: bazooka;
+        }  
       </style>
   </head>
   <body>
-    <div>
+    <div class="container">
       <div>
           <a href="/">Home</a>
       </div>
