--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,11 +6,16 @@
       <meta name='viewport' content="width=device-width, initial-scale=1" />
       <style>
         .container {
-            max-width: 800px;
-            margin: 0 auto;
-            color: grey;
-            font-family: bazooka;
-        }  
+             
+              max-width: 800px;
+              margin: 0 auto;
+              color: grey;
+              font-family: BAZOOKA;
+              padding-top: 60px;
+              padding-left: 20px;
+              padding-right: 20px;
+}
+}  
       </style>
   </head>
   <body>
