[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,16 @@
             Article One | Keshav Ashiya
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -26,6 +34,7 @@
             <p>
                 This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article. This is the content of my first article.
             </p>
+        </div>
         </div>
     </body>
 </html>
