[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,10 @@
             .container{
                 max-width: 800px;
                 margin: 0 auto;
-                color: grey;
+                color: black;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
             }
         </style>
     </head>
