--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -16,6 +16,7 @@
         </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -30,6 +31,7 @@
             <p>
                 This is the content of my second article. This is the content of my second article.
             </p>
+        </div>
         </div>
     </body>
 </html>
