--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! I am Keshav Ashiya.
             <h4>This is my webapp.</h4>
-            I'm a profesional person.
+            <h1>I'm a profesional person.</h1>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
