[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
             <h4>This is my webapp.</h4>
             <h1>I'm a profesional person.</h1>
         </div>
+        <script>
+            alert('Hi, I\'m Javascript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
