--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,9 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+      <div class="container">
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://avatars0.githubusercontent.com/u/20239068?v=3&u=23c9e410ff380988d5211a0394750098d515ac57&s=140.jpj" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
@@ -13,6 +14,10 @@
             <h4>This is my webapp.</h4>
             <h1>I'm a profesional person.</h1>
         </div>
+        <div class="footer">
+            
+        </div>
+      </div>
         <script>
             alert('Hi, I\'m Javascript');
         </script>
