--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
       <div class="container">
         <div class="center">
-            <img id='madi' src="https://avatars0.githubusercontent.com/u/20239068?v=3&u=23c9e410ff380988d5211a0394750098d515ac57&s=140.jpj" class="img-medium"/>
+            <img id='madi' src="https://avatars0.githubusercontent.com/u/20239068?v=3&u=23c9e410ff380988d5211a0394750098d515ac57&s=140" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
