--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
             <h1>I'm a profesional person.</h1>
         </div>
         <div class="footer">
-            
+            This Button <button id="counter">Click</button> has been clicked <span id="count">0</span> times.
         </div>
       </div>
         <script>
