--- a/ui/index.html
+++ b/ui/index.html
@@ -17,9 +17,18 @@
       </div>
         <div class="footer">
             This Button <button id="counter">Click</button> has been clicked <span id="count">0</span> times.
+            <br/>
+            <input type="text" id="name" placefolder="name"></input>
+            <input type="submit" value="submit"></input>
+            <ul>
+                <li>name1</li>
+                <li>name2</li>
+                <li>name3</li>
+            </ul>
         </div>
         <script>
             alert('Hi, I\'m Javascript');
         </script>
+        <script type="text/javascript" src="/vi/main.js"></script>
     </body>
 </html>
