--- a/ui/index.html
+++ b/ui/index.html
@@ -14,10 +14,9 @@
             <h4>This is my webapp.</h4>
             <h1>I'm a profesional person.</h1>
         </div>
-      </div>
         <div class="footer">
-            This Button <button id="counter">Click</button> has been clicked <span id="count">0</span> times.
-            <br/>
+            This Button <button id="counter">Click me</button> has been clicked <span id="count">0</span> times.
+            <hr/>
             <input type="text" id="name" placefolder="name"></input>
             <input type="submit" value="submit"></input>
             <ul>
@@ -25,6 +24,7 @@
                 <li>name2</li>
                 <li>name3</li>
             </ul>
+        </div>
         </div>
         <script>
             alert('Hi, I\'m Javascript');
