--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
         <div class="center text-big bold">
             Hi! I am Keshav Ashiya.
             <h4>This is my webapp.</h4>
-            <h1>I'm a profesional person.</h1>
+            <h1>I'm a professional person.</h1>
         </div>
         <div class="footer">
             This Button <button id="counter">Click me</button> has been clicked <span id="count">0</span> times.
